@@ -1,5 +1,10 @@
 # Native Image Changelog
 
-This changelog summarizes major changes to Native Image, developed under the codename **Substrate VM**.
+This changelog summarizes major changes to GraalVM Native Image.
 
-## Version 21.3.0 
+## Version 22.0.0
+* (GR-33930) Decouple HostedOptionParser setup from classpath/modulepath scanning (use ServiceLoader for collecting options).
+* (GR-33504) Implement --add-reads for native-image and fix --add-opens error handling.
+* (GR-33983) Remove obsolete com.oracle.svm.thirdparty.jline.JLineFeature from substratevm:LIBRARY_SUPPORT.
+* (GR-34577) Remove support for outdated JDK versions between 11 and 17. Since JDK versions 12, 13, 14, 15, 16 are no longer supported, there is no need to explicitly check for and allow these versions.
+
